# QuanLyHangHoaWeb

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: alembic.ini  batch5_full_rehearsal_sales_returns_import_report.json  batch5_full_rehearsal_verification_result.json  batch5_sales_returns_import_plan_real_app.json  full_rehearsal_sales_returns_import_report.json  full_rehearsal_verification_result.json  inventory_customer_core_import_plan_real_app.json  inventory_customer_core_import_report_real_db.json  inventory_customer_validation_report.json  inventory_customer_validation_report_after_policy_update.json  pyproject.toml  sales_returns_import_plan_real_app.json
backend/.tmp-tests/102b579226cb4512af9e90dc590bebf1/: app.db
backend/.tmp-tests/1a86497fc274479a9b144d97a5e9cf0c/: app.db
backend/.tmp-tests/3952cda381544cdbbe1a66fd4d739b94/: app.db
backend/.tmp-tests/3b439292d0af4cb4b7c20bada22aadbb/: app.db
backend/.tmp-tests/45080c82a8324fa5ac7ec5d8f5c3a34a/: app.db
backend/.tmp-tests/45cab293db104ec99b1ee41d528a5c04/: app.db
backend/.tmp-tests/48b2080153eb4d58ad3e97ea65df0873/: app.db
backend/.tmp-tests/5bf160c7ed604e23b6fe2c44fd826a05/: app.db
backend/.tmp-tests/6976f7832e3645a983b8c906e2a45642/: app.db
backend/.tmp-tests/6e72cedc6c924d1f8c2cd2c14631676d/: app.db
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py  (+1 more)
backend/scripts/: attendance_import_dry_run.py
backend/tests/: conftest.py  test_health.py
backend/validation_sources/: real_app_copy.db  schema_verify_app_copy.db
(+395 files in other folders)
