[project]
name = "quanlyhanghoaweb-backend"
version = "0.1.0"
description = "FastAPI backend foundation for the QuanLyHangHoa web migration."
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.115",
    "pwdlib[argon2]>=0.2",
    "PyJWT>=2.8",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: integration tests that may require external services",
    "postgres: PostgreSQL-backed tests requiring TEST_DATABASE_URL",
    "concurrency: concurrent transaction behavior tests",
]
